agregue la estructura + E2

--- a/index.html
+++ b/index.html
@@ -10,14 +10,113 @@
   </head>
   <body>
     <header>
-      <img src="assest/otro logo.svg" alt="Logo de Ignacio" />
+      <img class="logo" src="assest/otro logo.svg" alt="Logo de Ignacio" />
       <nav class="navbar">
         <ul class="navbar-list">
           <li><a href="#">About me</a></li>
-          <li><a href="#">Skilss</a></li>
+          <li><a href="#">Skills</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="yo">
+        <div class="sobremi">
+          <h1>About Me</h1>
+          <p>
+            Hola!!! Me presento, soy Ignacio Poledo Paz, soy de Argentina Bs.
+            As. , nací el 12/12/2000 y vivo actualmente en Avellaneda. Estudie
+            la primaria y secundaria en el colegio Sagrado Corazón de Barracas,
+            me recibí en el 2018 con el título secundario de Bachiller
+            Mercantil. Luego arranque a estudiar la carrera terciaria de Agente
+            de Propaganda Médica (APM) en la cual me recibí en el año 2020 con
+            las matriculas para ejercer en Provincia y Capital. En el 2021
+            arranco a cursar la carrera de Diseño Gráfico Digital en el
+            Instituto Nuevos Aires, curse 2 años de esta misma y me di cuenta
+            que mi interes iba mas por la programacion, entonces fue donde
+            cambio de carrera y me anoto al bootcamp full stack de NUCBA, en el
+            cual me encuentro cursando actualmente.
+          </p>
+        </div>
+        <div class="fotomia">
+          <img
+            src="https://via.placeholder.com/200 x 200"
+            alt="Ignacio Poledo Paz"
+          />
+        </div>
+      </section>
+      <section id="habilities">
+        <h2>Programming Skills</h2>
+        <div class="programacion">
+          <img
+            src="/LandingPage/assest/logos/HTML5_logo_and_wordmark.svg.png"
+            alt="HTML5"
+          />
+          <img
+            src="/LandingPage/assest/logos/CSS3_logo_and_wordmark.svg.png"
+            alt="CSS"
+          />
+          <img
+            src="/LandingPage/assest/logos/JavaScript-logo.png"
+            alt="JAVASCRIPT"
+          />
+        </div>
+        <div>
+          <h2 class="TDG">Digital Graphic Design Skills</h2>
+          <div class="diseño">
+            <img
+              src="/LandingPage/assest/logos/Illustrator-Logo.png"
+              alt="ADOBE ILLUSTRATOR"
+            />
+            <img
+              src="/LandingPage/assest/logos/Adobe_InDesign_CC_icon.svg.png"
+              alt="ADOBE INDESING"
+            />
+            <img
+              src="/LandingPage/assest/logos/Adobe_XD_CC_icon.svg.png"
+              alt="ADOBE XD"
+            />
+            <img
+              src="/LandingPage/assest/logos/Adobe_Photoshop_CC_icon.svg.png"
+              alt="ADOBE PHOTOSHOP"
+            />
+            <img
+              src="/LandingPage/assest/logos/Adobe_After_Effects_CC_icon.svg.png"
+              alt="ADOBE AFTER EFFECTS"
+            />
+            <img
+              src="/LandingPage/assest/logos/Adobe_Audition_CC_icon_(2020).svg.png"
+              alt="ADOBE AUDITION"
+            />
+            <img
+              src="/LandingPage/assest/logos/Adobe_Premiere_Pro_CC_icon.svg.png"
+              alt="ADOBE PREMIERE"
+            />
+          </div>
+        </div>
+      </section>
+      <section id="contactarme">
+        <h2>Contact</h2>
+        <div class="contacto">
+          <p>
+            <b>ESTO VA A SER UN FORMULARIO </b> Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Praesentium dignissimos doloremque,
+            minus qui, ea eos voluptate ipsam placeat aut esse sint sit
+            laudantium itaque incidunt error ipsum ex voluptatem non! Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Quis ad officiis
+            esse dolorum! Veniam tenetur similique corrupti labore optio
+            voluptatibus, ullam odit rem, voluptatum dignissimos quam,
+            cupiditate culpa neque praesentium. Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Tenetur aperiam eos nobis odio, id
+            molestias, quaerat, impedit natus nostrum rem consectetur quasi
+            harum eligendi. Voluptatum dolorum totam cupiditate ratione
+            reiciendis! Lorem ipsum dolor sit, amet consectetur adipisicing
+            elit. Inventore eum quae, quaerat maiores quis delectus ipsum nisi
+            eligendi tempora deleniti aspernatur porro suscipit doloremque odio
+            illo at in a unde!
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
