cambiando el logo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             alt="CSS"
           />
           <img
-            src="/LandingPage/assest/logos/JavaScript-logo.png"
+            src="/LandingPage/assest/logos/javascript.svg"
             alt="JAVASCRIPT"
           />
         </div>
