--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             alt="HTML5"
           />
           <img
-            src="/LandingPage/assest/logos/CSS3_logo_and_wordmark.svg.png"
+            src="../LandingPage/assest/logos/CSS3_logo_and_wordmark.svg.png"
             alt="CSS"
           />
           <img
