--- a/index.html
+++ b/index.html
@@ -48,14 +48,8 @@
       <section id="habilities">
         <h2>Programming Skills</h2>
         <div class="programacion">
-          <img
-            src="/LandingPage/assest/logos/HTML5_logo_and_wordmark.svg.png"
-            alt="HTML5"
-          />
-          <img
-            src="../LandingPage/assest/logos/CSS3_logo_and_wordmark.svg.png"
-            alt="CSS"
-          />
+          <img src="/LandingPage/assest/logos/html.svg" alt="HTML5" />
+          <img src="/LandingPage/assest/logos/css.svg" alt="CSS" />
           <img
             src="/LandingPage/assest/logos/javascript.svg"
             alt="JAVASCRIPT"
@@ -65,7 +59,8 @@
           <h2 class="TDG">Digital Graphic Design Skills</h2>
           <div class="diseño">
             <img
-              src="/LandingPage/assest/logos/Illustrator-Logo.png"
+              class="ai"
+              src="/LandingPage/assest/logos/ai.svg"
               alt="ADOBE ILLUSTRATOR"
             />
             <img
