--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <section id="habilities">
         <h2>Programming Skills</h2>
         <div class="programacion">
-          <img src="/LandingPage/assest/logos/html.svg" alt="HTML5" />
-          <img src="/LandingPage/assest/logos/css.svg" alt="CSS" />
+          <img src="./LandingPage/assest/logos/html.svg" alt="HTML5" />
+          <img src="./LandingPage/assest/logos/css.svg" alt="CSS" />
           <img
-            src="/LandingPage/assest/logos/javascript.svg"
+            src="./LandingPage/assest/logos/javascript.svg"
             alt="JAVASCRIPT"
           />
         </div>
@@ -60,31 +60,31 @@
           <div class="diseño">
             <img
               class="ai"
-              src="/LandingPage/assest/logos/ai.svg"
+              src="./LandingPage/assest/logos/ai.svg"
               alt="ADOBE ILLUSTRATOR"
             />
             <img
-              src="/LandingPage/assest/logos/Adobe_InDesign_CC_icon.svg.png"
+              src="./LandingPage/assest/logos/Adobe_InDesign_CC_icon.svg.png"
               alt="ADOBE INDESING"
             />
             <img
-              src="/LandingPage/assest/logos/Adobe_XD_CC_icon.svg.png"
+              src="./LandingPage/assest/logos/Adobe_XD_CC_icon.svg.png"
               alt="ADOBE XD"
             />
             <img
-              src="/LandingPage/assest/logos/Adobe_Photoshop_CC_icon.svg.png"
+              src="./LandingPage/assest/logos/Adobe_Photoshop_CC_icon.svg.png"
               alt="ADOBE PHOTOSHOP"
             />
             <img
-              src="/LandingPage/assest/logos/Adobe_After_Effects_CC_icon.svg.png"
+              src="./LandingPage/assest/logos/Adobe_After_Effects_CC_icon.svg.png"
               alt="ADOBE AFTER EFFECTS"
             />
             <img
-              src="/LandingPage/assest/logos/Adobe_Audition_CC_icon_(2020).svg.png"
+              src="./LandingPage/assest/logos/Adobe_Audition_CC_icon_(2020).svg.png"
               alt="ADOBE AUDITION"
             />
             <img
-              src="/LandingPage/assest/logos/Adobe_Premiere_Pro_CC_icon.svg.png"
+              src="./LandingPage/assest/logos/Adobe_Premiere_Pro_CC_icon.svg.png"
               alt="ADOBE PREMIERE"
             />
           </div>
