--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <section id="habilities">
         <h2>Programming Skills</h2>
         <div class="programacion">
-          <img src="./LandingPage/assest/logos/html.svg" alt="HTML5" />
+          <img src="./assest/logos/html.svg" alt="HTML5" />
           <img src="./LandingPage/assest/logos/css.svg" alt="CSS" />
           <img
             src="./LandingPage/assest/logos/javascript.svg"
