--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="assest/otro logo.svg" />
   </head>
   <body>
-    <header>
+    <header class="head">
       <img class="logo" src="assest/otro logo.svg" alt="Logo de Ignacio" />
       <nav class="navbar">
         <ul class="navbar-list">
@@ -19,7 +19,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="principal">
       <section id="yo">
         <h1>About Me</h1>
         <div class="sobremi">
@@ -87,7 +87,7 @@
       </section>
       <section id="contactarme">
         <h2>Contact</h2>
-        <div class="contacto">
+        <form class="contacto">
           <div class="Dmail">
             <label for="Email">Email address</label>
             <input class="mail" type="email" id="Email" />
@@ -99,7 +99,7 @@
           <div class="enviar">
             <input class="boton" type="submit" value="Enviar" />
           </div>
-        </div>
+        </form>
       </section>
     </main>
     <footer class="footer">
