--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ignacio Poledo Paz</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="assest/otro logo.svg" />
   </head>
@@ -12,6 +16,8 @@
     <header class="head">
       <img class="logo" src="assest/otro logo.svg" alt="Logo de Ignacio" />
       <nav class="navbar">
+        <label for="toggle-menu"><i class="fa-solid fa-bars"></i></label>
+        <input type="checkbox" id="toggle-menu" />
         <ul class="navbar-list">
           <li><a href="#">About me</a></li>
           <li><a href="#">Skills</a></li>
