--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <main class="principal">
       <section id="yo">
-        <h1>About Me</h1>
+        <h1 class="scale">About Me</h1>
         <div class="sobremi">
           <p>
             Hola!!! Me presento, soy Ignacio Poledo Paz, soy de Argentina Bs.
